2014-04-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/{files.c,nano.c}: Avoid two more compilation warnings.
	* configure.ac: Allow --enable-extra and --enable-multibuffer
	to override --enable-tiny.
	* src/rcfile.c (check_vitals_mapped): Do not allow 'set quiet'
	to suppress a fatal-error message, make sure the user sees it.
	* src/color.c: Comment tweaks.

2014-04-03  Benno Schulenberg  <bensberg@justemail.net>
	* configure.ac: Remove unused '*_support' variables.
	* doc/syntax/po.nanorc: New file, syntax colouring for PO files.
	* configure.ac: Stop --with-slang from duplicating --enable-tiny.
	* configure.ac: Sort all the disabling options alphabetically.
	* src/{proto.h,files.c,global.c,nano.c,rcfile.c}, configure.ac:
	Convert #ifdef ENABLE_MULTIBUFFER to #ifndef DISABLE_MULTIBUFFER.
	* src/{proto.h,files.c,,nano.c,winio.c}, configure.ac:
	Convert #ifdef NANO_EXTRA to #ifndef DISABLE_EXTRA.
	* src/{global.c,text.c}: Fix two compilation warnings for tiny.

2014-04-02  Benno Schulenberg  <bensberg@justemail.net>
	* configure.ac, doc/Makefile.am: Try to build the info documentation
	only when 'makeinfo' is available.  Patch partly by Mike Frysinger.
	* configure.ac: Upping the required version of Autoconf, to ensure the
	ONCE macros are defined.  Suggested by Kamil Dudka and Mike Frysinger.

2014-04-02  Mike Frysinger  <vapier@gentoo.org>
	* doc/man/{,fr}/Makefile.am: Simplify the man rules still further.
	* .gitignore: Add 'config.cache', created by './configure -C'.
	* src/nano.c (die_save_file): Newer gcc warns about set-but-unused
	variables, so add a dummy if() check to kill that off.
	* src/search.c (search_init): Silence a compiler warning about a
	variable possibly being used uninitialized.

2014-03-31 Chris Allegretta <chrisa@asty.org>
	* doc/syntax/go.nanorc: basic go syntax highlighting

2014-03-30  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/changelog.nanorc: New file, first attemp at colouring
	Changelog files.