@@ -719,7 +719,7 @@ ssize_t do_replace_loop(
 	filepart = partition_filestruct(top, top_x, bot, bot_x);
 	openfile->edittop = openfile->fileage;
 	openfile->mark_set = FALSE;
-#ifdef ENABLE_COLOR
+#ifndef DISABLE_COLOR
 	reset_multis(openfile->current, TRUE);
 #endif
 	edit_refresh();
@@ -866,12 +866,12 @@ ssize_t do_replace_loop(
 	    free(openfile->current->data);
 	    openfile->current->data = copy;
 
-#ifdef ENABLE_COLOR
+#ifndef DISABLE_COLOR
 	reset_multis(openfile->current, TRUE);
 #endif
 	edit_refresh();
 	    if (!replaceall) {
-#ifdef ENABLE_COLOR
+#ifndef DISABLE_COLOR
 		/* If color syntaxes are available and turned on, we
 		 * need to call edit_refresh(). */
 		if (openfile->colorstrings != NULL &&
